--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     </link>
 </head>
 
+
 <body>
     <section class="home-main">
         <div>
@@ -41,15 +42,13 @@
 
 
                     <div class="sub-sub-about">
-                        <h2>First Step !</h2>
+                        <h2>First Step !</h2><br>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque
                             repellendus tempore magnam nihil quibusdam beatae quod ipsum
                             molestias? Doloribus esse culpa, sit nisi recusandae facere deleniti
-                            ducimus asperiores! Inventore? Ut aut deleniti distinctio labore
-                            nisi possimus voluptatem dolores modi doloribus expedita at qui esse
-                            necessitatibus provident sapiente praesentium.
-                        </p>
+                            ducimus asperiores! Inventore? 
+                        </p><br>
                         <a href="socialmedia.html" class="gradient-btn">Contact Us</a>
                     </div>
 
@@ -73,10 +72,11 @@
             exercitationem doloremque error? Blanditiis sapiente doloribus consequuntur saepe, repudiandae est quo fugit
             fuga maiores impedit culpa adipisci odio labore error soluta.</p>
     </section>
-
+    <br><br><br>
     <section class="mission">
-        <h1 align="center">Mission</h1>
+        
         <table align="center" cellpadding="15">
+            <h1 align="center">Mission</h1>
             <tr>
                 <th><video src="story1.mp4" autoplay="" loop=""></video></th>
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, eos ratione? Molestias nobis
@@ -109,19 +109,19 @@
             </div>
     </section>
     <div class="copyright">
-        <hr>
-        <p><b>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
+        <hr><br>
+        <p>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
                 reading
                 and basic understanding. Tutorials, references, and examples are constantly reviewed to avoid
                 errors,
                 but we
                 cannot warrant full correctness of all content. While using this site, you agree to have read and
                 accepted
-                our terms of use, cookie and privacy policy.</p></b>
-
-        <b>
+                our terms of use, cookie and privacy policy.</p>
+                <br>
+        
             <p align="center"> @Copyright 2021-2022 by Refsnes Data. All Rights Reserved.</p>
-        </b>
+            <br>
 
     </div>
 
