--- a/cpp.html
+++ b/cpp.html
@@ -32,34 +32,35 @@
             </nav>
         </div>
     </section>
-    <div>
+    <div class="python">
+        <br>
         <h1 align="center">C++</h1>
-        <section>
-
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/yGB9jhsEsr8"
+        <section class="padding">
+            <br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/yGB9jhsEsr8"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/ZzaPdXTrSb8"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/ZzaPdXTrSb8"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/vLnPwxZdW4Y"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/vLnPwxZdW4Y"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/KC47C8sg2zQ"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/KC47C8sg2zQ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/SYd5F4gIH90"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/SYd5F4gIH90"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube-nocookie.com/embed/Q33KBiDriJY"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube-nocookie.com/embed/Q33KBiDriJY"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen></iframe><br><br><br>
         </section>
 
     </div>
