--- a/cprograming.html
+++ b/cprograming.html
@@ -32,34 +32,35 @@
             </nav>
         </div>
     </section>
-    <div>
+    <div class="python">
+        <br>
         <h1 align="center">C Programing</h1>
-        <section>
-
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/irqbmMNs2Bo"
+        <section class="padding">
+            <br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/irqbmMNs2Bo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/ZSPZob_1TOk"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/ZSPZob_1TOk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/KJgsSFOSQv0"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/KJgsSFOSQv0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/8PopR3x-VMY?controls=0"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/8PopR3x-VMY?controls=0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/ma6kNYtyFH4"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/ma6kNYtyFH4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/I-_oAhcp1i0"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/I-_oAhcp1i0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen></iframe><br><br><br>
         </section>
 
     </div>
