--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         </div>
         <div class="main-content" align="center">
             <h1>Welcome !</h1>
+            <br>
             <h2>Boost Your Skill By Taking Your First Step</h2>
+            <br>
             <h1>Let's take your First Step</h1>
+            <br>
             <button class="button"><span><a href="course.html">Course</a></span></button>
     </section>
 
@@ -44,15 +47,15 @@
         <div class="about-sub">
 
             <div class="sub-sub-about">
-                <h2>We are Excellent In Education</h2>
+                <h2>Learn Coding Faster with Us!</h2>
+                <br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque
-                    repellendus tempore magnam nihil quibusdam beatae quod ipsum
-                    molestias? Doloribus esse culpa, sit nisi recusandae facere deleniti
-                    ducimus asperiores! Inventore? Ut aut deleniti distinctio labore
-                    nisi possimus voluptatem dolores modi doloribus expedita at qui esse
-                    necessitatibus provident sapiente praesentium.
+                    We Provide One Stop Solution to Learn Coding faster which help us to take your First Step.</p>
+                  <p> Include Video lecture from top 6 Youtube Creators with their Notes Added with Roadmap Section & List of Some Basic Codes which makes Easy to Learn.<p>
+                    View About Page for more Information.
+
                 </p>
+                <br>
                 <a href="about.html" class="gradient-btn">About</a>
             </div>
             <video src="about site.mp4" alt="upload" autoplay="" loop=""></video>
@@ -64,15 +67,14 @@
         <div class="about-sub">
 
             <div class="sub-sub-about">
-                <h2>Strive for Excellent</h2>
+                <h2>One Stop Solution for Coding</h2><br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque
-                    repellendus tempore magnam nihil quibusdam beatae quod ipsum
-                    molestias? Doloribus esse culpa, sit nisi recusandae facere deleniti
-                    ducimus asperiores! Inventore? Ut aut deleniti distinctio labore
-                    nisi possimus voluptatem dolores modi doloribus expedita at qui esse
-                    necessitatibus provident sapiente praesentium.
-                </p>
+                    As we learn from the Unorganised Source thats make us more Confusing to move ahead.
+                    <p>
+                        We are the "Organised Source" that provide you All the Resourses you needed for Learn Coding and Move Ahead. 
+                        <p>
+                            Get Free Mentor to Solve your Voding Problems Visit to "Contact Us" for more Information.
+                </p><br>
                 <a href="socialmedia.html" class="gradient-btn">Contact Us</a>
             </div>
             <video src="why us.mp4" alt="upload" autoplay="" loop=""></video>
@@ -84,15 +86,12 @@
         <div class="about-sub">
 
             <div class="sub-sub-about">
-                <h2>Strive for Excellent</h2>
+                <h2>Take your First Step!</h2><br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque
-                    repellendus tempore magnam nihil quibusdam beatae quod ipsum
-                    molestias? Doloribus esse culpa, sit nisi recusandae facere deleniti
-                    ducimus asperiores! Inventore? Ut aut deleniti distinctio labore
-                    nisi possimus voluptatem dolores modi doloribus expedita at qui esse
-                    necessitatibus provident sapiente praesentium.
-                </p>
+                    A roadmap is a visual representation of your strategic plans. It ties together your strategy (the "why"), the work you will need to do to achieve your goals (the "what"), and a timeline for completion (the "when").<p>
+                    It is extremely effective planning approach because it provides a clear way to visualize and communicate what you want to accomplish.
+
+                </p><br>
                 <a href="roadmap.html" class="gradient-btn">RoadMap</a>
             </div>
             <video src="roadmap.mp4" alt="upload" autoplay="" loop=""></video>
@@ -104,7 +103,7 @@
         <div class="about-sub">
 
             <div class="sub-sub-about">
-                <h2>Strive for Excellent</h2>
+                <h2>Strive for Excellent</h2><br>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque
                     repellendus tempore magnam nihil quibusdam beatae quod ipsum
@@ -112,7 +111,7 @@
                     ducimus asperiores! Inventore? Ut aut deleniti distinctio labore
                     nisi possimus voluptatem dolores modi doloribus expedita at qui esse
                     necessitatibus provident sapiente praesentium.
-                </p>
+                </p><br>
                 <a href="notes.html" class="gradient-btn">Notes</a>
             </div>
             <video src="notes.mp4" alt="upload" autoplay="" loop=""></video>
@@ -143,10 +142,10 @@
                     officiis, vitae, quae veniam accusantium obcaecati possimus tempore ipsam consectetur quia
                     distinctio fuga! Minima, perspiciatis qui, magnam possimus expedita architecto, in harum asperiores
                     quam nihil pariatur autem!</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, aspernatur! Ex quo voluptates
-                    cupiditate, veritatis illum voluptas eaque dolorum dolores ratione adipisci suscipit inventore nam
-                    in autem excepturi quam cum deleniti, aliquid nostrum accusantium, delectus et eius possimus.
-                    Laboriosam cum, excepturi repellendus ab eius pariatur? Sapiente debitis neque reiciendis at!</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem inventore cum rerum sit voluptatum
+                    laborum tenetur eos, dolore sint voluptatem dolorum ipsam nesciunt repudiandae, quisquam saepe odio
+                    accusamus facere quibusdam deleniti, repellat sed ipsum libero. Dicta consequuntur nihil eveniet
+                    deserunt, nesciunt, voluptates a ullam temporibus nisi ratione fugit maxime aliquam.</td>
                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem inventore cum rerum sit voluptatum
                     laborum tenetur eos, dolore sint voluptatem dolorum ipsam nesciunt repudiandae, quisquam saepe odio
                     accusamus facere quibusdam deleniti, repellat sed ipsum libero. Dicta consequuntur nihil eveniet
@@ -186,19 +185,19 @@
 
 
     <div class="copyright">
-        <hr>
-        <p><b>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
+        <hr><br>
+        <p>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
                 reading
                 and basic understanding. Tutorials, references, and examples are constantly reviewed to avoid
                 errors,
                 but we
                 cannot warrant full correctness of all content. While using this site, you agree to have read and
                 accepted
-                our terms of use, cookie and privacy policy.</p></b>
+                our terms of use, cookie and privacy policy.</p>
 
-        <b>
+                <br>
             <p align="center"> @Copyright 2021-2022 by Refsnes Data. All Rights Reserved.</p>
-        </b>
+            <br>
 
     </div>
 
