--- a/java.html
+++ b/java.html
@@ -32,33 +32,35 @@
             </nav>
         </div>
     </section>
-    <div>
+    <div class="python">
+        <br>
         <h1 align="center">Java</h1>
-        <section>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/WYpQ1VkXag0"
+        <section class="padding">
+            <br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/WYpQ1VkXag0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/UmnCZ7-9yDY"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/UmnCZ7-9yDY"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/yRpLlJmRo2w"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/yRpLlJmRo2w"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/VZg5r9i90z0"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/VZg5r9i90z0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/eIrMbAQSU34"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/eIrMbAQSU34"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/8cm1x4bC610"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/8cm1x4bC610"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen></iframe><br><br><br>
 
         </section>
     </div>
