--- a/python.html
+++ b/python.html
@@ -32,34 +32,38 @@
             </nav>
         </div>
     </section>
+    
     <div class="python">
+        <br>
         <h1 align="center">Python</h1>
-        <section>
+        <section class="padding">
+            <br><br>
 
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/gfDE2a7MKjA"
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/gfDE2a7MKjA"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/vLqTf2b6GZw"
+                <br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/vLqTf2b6GZw"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/_uQrJ0TkZlc"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/_uQrJ0TkZlc"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/L5sZ6WgOnj0"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/L5sZ6WgOnj0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/WGJJIrtnfpk"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/WGJJIrtnfpk"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            <iframe width="400" height="315" src="https://www.youtube.com/embed/XHzQvq-ltAo"
+                allowfullscreen></iframe><br><br><br>
+            <iframe width="800" height="435" src="https://www.youtube.com/embed/XHzQvq-ltAo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen></iframe><br><br><br>
         </section>
     </div>
 
