--- a/roadmap.html
+++ b/roadmap.html
@@ -35,8 +35,8 @@
 
 
     <section class="main-python">
-        <h1 align="center">RoadMap</h1>
-        <h2 align="center">This will provide you a proper Pathway for your Course </h2>
+        <h1 align="center">RoadMap</h1><br>
+        <h2 align="center">This will provide you a proper Pathway for your Course </h2><br>
         <p align="center"> <a href="pythonroadmap.html" class="pythonbutton">Python</a>
             <br>
             <a href="cprogramingroadmap.html" class=" pythonbutton">C Programing</a>
@@ -84,19 +84,19 @@
 
 
     <div class="copyright">
-        <hr>
-        <p><b>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
+        <hr><br>
+        <p>DAV Courses is optimized for learning, testing, and training. Examples might be simplified to improve
                 reading
                 and basic understanding. Tutorials, references, and examples are constantly reviewed to avoid
                 errors,
                 but we
                 cannot warrant full correctness of all content. While using this site, you agree to have read and
                 accepted
-                our terms of use, cookie and privacy policy.</p></b>
+                our terms of use, cookie and privacy policy.</p><br>
 
-        <b>
+        
             <p align="center"> @Copyright 2021-2022 by Refsnes Data. All Rights Reserved.</p>
-        </b>
+            <br>
 
     </div>
 
